Further developed sum of 2 die pdf graphics and included sum of 2 die illustration to pdfcdf.tex

--- a/common/pdfcdf.tex
+++ b/common/pdfcdf.tex
@@ -812,41 +812,9 @@ Let $Z=\tan\Theta$. Then
 %=======================================
 \section{Functions of two random variables}
 %=======================================
-%As described in \prefpp{def:prob_space},
-%every probability space $\ps$ contains a probability measure $\psp:\pse\to\intcc{0}{1}$.
-%This probability measure has some basic properties as described in
-%\pref{thm:P} (next).
-%%---------------------------------------
-%\begin{theorem}
-%\label{thm:P}
-%%---------------------------------------
-%Let $\ps$ be a probability space,
-%and $\set{B_n}{n=1,2,\ldots,\xN}$ be a partition of a set $B$.
-%\thmbox{\begin{array}{rc>{\ds}l@{\qquad}l}
-%  \psp(B)  &=& \sum_{n=1}^\xN \psp(B_n)    & \forall B\in\pse\\
-%  \psp(AB) &=& \sum_{n=1}^\xN \psp(AB_n)   & \forall A,B\in\pse
-%\end{array}}
-%\end{theorem}
-%\begin{proof}
-%This is because $\psp$ is a measure and by \prefpp{def:measure}.
-%\end{proof}
-
-
-
-
-%=======================================
-%\section{Multiple random variables}
-%=======================================
-%%---------------------------------------
-%\begin{definition}
-%\index{convolution}
-%\label{def:conv}
-%%---------------------------------------
-%The {\bf convolution} operator $\conv$ is defined as
-%\defbox{ \ff(x)\conv\fg(x) \eqd \int_u \ff(u)\fg(x-u) \du }
-%\end{definition}
 %---------------------------------------
 \begin{theorem}
+\label{thm:pdfconv}
 %---------------------------------------
 Let $\rvX$, $\rvY$, and $\rvZ$ be \fncte{random variable}s. %
 \thmbox{
@@ -906,6 +874,25 @@ Let $\rvX$, $\rvY$, and $\rvZ$ be \fncte{random variable}s. %
 %    &&    \text{by definition of $\conv$ \xref{def:conv}}
 %\end{align*}
 \end{proof}
+
+\begin{figure}
+  \centering%
+  \Huge%
+  \begin{tabular}{c>{\Huge}c c>{\Huge}c l}%
+    \tboxc{\includegraphics{graphics/pdf_fairdie_blue.pdf}} &\tbox{+}&%
+    \tboxc{\includegraphics{graphics/pdf_fairdie_red.pdf}}  &\tbox{=}&%
+    \tboxc{\includegraphics{graphics/pdf_dicesum_bluered.pdf}}% 
+    \\
+    \tboxc{\includegraphics{graphics/n0.pdf}}               &\tbox{+}&%
+    \tboxc{\includegraphics{graphics/n0.pdf}}               &\tbox{=}&%
+    \tboxc{\includegraphics{graphics/n1.pdf}}%              
+    \\                                                      
+    \tboxc{\includegraphics{graphics/n0.pdf}}               &\tbox{+}&%
+    \tboxc{\includegraphics{graphics/n1.pdf}}               &\tbox{=}&%
+    \tboxc{\includegraphics{graphics/n2.pdf}}%
+  \end{tabular}
+  \caption{\opb{Sum} of random variables yields \opb{convolution} of pdfs \xref{thm:pdfconv}}
+\end{figure}
 
 %---------------------------------------
 \begin{theorem}
