--- a/common/probmt.tex
+++ b/common/probmt.tex
@@ -499,97 +499,54 @@ Let $\setB$ be a set and $\set{\setB_n}{n=1,2,\ldots,\xN}$ a set of sets.
 $\psp$ is a \fncte{measure} and by \prefpp{def:measure}.
 \end{proof}
 
-
-
-
+%---------------------------------------
+\begin{proposition}
+\label{prop:cdf_monotone}
+%---------------------------------------
+Let $\ps$ be a probability space, and $\rvX$ a \fncte{random variable}
+with \fncte{probability density function} $\ppx(x)$ and
+\fncte{cumulative distribution function} $\pcx(x)$.
+\propbox{\begin{array}{FMD}
+    (1).& $\pcx(x)$ is \prope{monotone}                                                    &and\\
+    (2).& $\ppx(x)$ is \prope{continuous} $\implies$ $\pcx(x)$ is \prope{strictly monotone}&and\\
+    (3).& $\ppx(x)$ is \prope{continuous} $\implies$ $\pcx(x)$ is \prope{invertible}
+  \end{array}}
+\end{proposition}
 
 %=======================================
 \section{Examples}
 %=======================================
-%20181104 in problatocn%%---------------------------------------
-%20181104 in problatocn%\exboxt{
-%20181104 in problatocn%  \begin{tabular}{m{\tw-52.5mm}}
-%20181104 in problatocn%%\begin{example}[\exmd{/-Lukasiewicz 3-valued probability space}/\exm{Kleene 3-valued probability space}/\exm{RM$_3$ probability space}]
-%20181104 in problatocn%\begin{example}[\exmd{Kleene 3-valued probability space}]
-%20181104 in problatocn%\label{ex:prob_L3_kl}
-%20181104 in problatocn%%---------------------------------------
-%20181104 in problatocn%    The function $\negat$ on the lattice $\psL$
-%20181104 in problatocn%    as illustrated to the right is a \fncte{Kleene negation}\ifsxref{negation}{def:negkl}. %{ex:negat_L3_kl}. %{def:negkl}.
-%20181104 in problatocn%    Together with the probability function $\psp$, also illustrated to the right, the structure $\ps$
-%20181104 in problatocn%    is a \structe{probability space} \xref{def:ps}.
-%20181104 in problatocn%\end{example}
-%20181104 in problatocn%  \end{tabular}%
-%20181104 in problatocn%  \tbox{\includegraphics{graphics/lat3_L3_1x0_-0-x-1_prob.pdf}}
-%20181104 in problatocn%}
-%20181104 in problatocn%
-%20181104 in problatocn%%---------------------------------------
-%20181104 in problatocn%\exboxt{
-%20181104 in problatocn%  \begin{tabular}{m{\tw-73.5mm}}
-%20181104 in problatocn%\begin{example}
-%20181104 in problatocn%\label{ex:limpx_m2}
-%20181104 in problatocn%%---------------------------------------
-%20181104 in problatocn%    The \structe{orthocomplemented lattice} $\psL$ \xref{def:latn} illustrated to the right is 
-%20181104 in problatocn%    \prope{Boolean} (and thus also \prope{distributive}---\xrefnp{thm:boolean}).
-%20181104 in problatocn%    The structure $\ps$ is a \structe{probability space} \xref{def:ps}.
-%20181104 in problatocn%\end{example}
-%20181104 in problatocn%  \end{tabular}%
-%20181104 in problatocn%  \tbox{\includegraphics{graphics/lat4_m2_boa_prob.pdf}}
-%20181104 in problatocn%  }
-%20181104 in problatocn%
-%20181104 in problatocn%%---------------------------------------
-%20181104 in problatocn%\exboxt{
-%20181104 in problatocn%  \begin{tabular}{m{\tw-82.343mm}}
-%20181104 in problatocn%\begin{example}
-%20181104 in problatocn%\label{ex:ps_o6}
-%20181104 in problatocn%%---------------------------------------
-%20181104 in problatocn%    The \structe{orthocomplemented lattice} $\psL$ illustrated to the right is an
-%20181104 in problatocn%    \structe{orthocomplemented O$_6$ lattice} \xref{def:o6}.
-%20181104 in problatocn%    %Together with the probability function $\psp$, also illustrated to the right, 
-%20181104 in problatocn%    The structure $\ps$ is a \structe{probability space} \xref{def:ps}.
-%20181104 in problatocn%\end{example}
-%20181104 in problatocn%  \end{tabular}%
-%20181104 in problatocn%  \tbox{\includegraphics{graphics/lat6_o6_prob_10adbc.pdf}}
-%20181104 in problatocn%  }
-
 %---------------------------------------
-\exboxt{
-  \begin{tabular}{m{\tw-83.1mm}}
-\begin{example}[Single coin toss]
+\begin{example}[Single coin flip]
 \label{ex:ps_coin}
 %---------------------------------------
-    Let $\coinhead$ represent ``heads" and $\cointail$ represent ``tails"
-    in a coin toss.
-    Let $0<p<1$ be the probability of a head.
-    A \structe{probability space} $\ps$ for this single coin toss is as illustrated to the right.
-\end{example}
-  \end{tabular}%
-  \tbox{\includegraphics{graphics/lat4_m2_psE_coin.pdf}}
+Let $\coinhead$ represent ``heads" and $\cointail$ represent ``tails" in a coin toss.
+Let $0<p<1$ be the probability of a head.
+A \structe{probability space} $\ps$ for this single coin toss is as follows:
+\exbox{
+  \begin{array}{rcl@{\qquad}D}
+    \psO &=&   \setn{\coinhead,\, \cointail}
+         &     %(set of outcomes)
+      \\
+    \psE &=&   \setn{\mcom{\emptyset}{neither},\,
+                     \mcom{\setn{\coinhead}}{heads},\,
+                     \mcom{\setn{\cointail}}{tails},\,
+                     \mcom{\setn{\coinhead,\,\cointail}}{heads or tails}
+                    }
+         &     %(sigma-algebra on $\pso$)
+      \\
+    \psP x &=& 
+      \brlr{\begin{array}{l>{\text{for }}l@{\qquad}D}
+        0   & x=\emptyset                  & (neither heads nor tails) \\
+        p   & x=\setn{\coinhead}           & (heads)                   \\
+        1-p & x=\setn{\text{\cointail}}    & (tails)                   \\
+        1   & x=\setn{\coinhead,\cointail} & (either heads or tails)
+      \end{array}}
+         &      %(probability measure on $\pse$)
+  \end{array}
+  \qquad\tbox{\includegraphics{graphics/lat4_m2_psE_coin.pdf}}
   }
-
-
-%%---------------------------------------
-%\begin{example}[Single coin flip]
-%%---------------------------------------
-%\exbox{\begin{array}{rcl@{\qquad}D}
-%  \pso &=&   \setn{\coinhead,\, \cointail}
-%       &     (set of outcomes)
-%    \\
-%  \pse &=&   \setn{\mcom{\emptyset}{neither},\,
-%                   \mcom{\setn{\coinhead}}{heads},\,
-%                   \mcom{\setn{\cointail}}{tails},\,
-%                   \mcom{\setn{\coinhead,\,\cointail}}{heads or tails}
-%                  }
-%       &     (sigma-algebra on $\pso$)
-%    \\
-%  \psp x &=& \left\{\begin{array}{l>{\text{for }}l@{\qquad}D}
-%      0           & x=\emptyset                  & (neither heads nor tails) \\
-%      \frac{1}{2} & x=\setn{\coinhead}           & (heads)                   \\
-%      \frac{1}{2} & x=\setn{\text{\cointail}}    & (tails)                   \\
-%      1           & x=\setn{\coinhead,\cointail} & (either heads or tails)
-%    \end{array}\right.
-%       &      (probability measure on $\pse$)
-%\end{array}}
-%\end{example}
+\end{example}
 
 %%---------------------------------------
 %\begin{example}[Two coin flips]
