took prob-stat bib references out of mathmisc.bib and put in new bibstyle file probstat.bib

--- a/common/calculus.tex
+++ b/common/calculus.tex
@@ -147,15 +147,12 @@ Proof by induction:
 
 
 Some proofs invoke differentiation multiple times.
-This is simplified thanks to the \hie{Leibniz rule}, also called the 
+This is simplified thanks to the \thme{Leibniz rule}, also called the 
 \hie{generalized product rule} (\hie{GPR}, next lemma).
-The Leibniz rule is remarkably similar in form to the \hie{binomial theorem}.
+The Leibniz rule is remarkably similar in form to the \thme{binomial theorem}.
 %--------------------------------------
-\begin{lemma}[Leibniz rule]
+\begin{lemma}[\thmd{Leibniz rule} / \thmd{generalized product rule}]
 %\footnote{\url{http://en.wikipedia.org/wiki/Leibniz_rule_(generalized_product_rule)}}
-\index{Leibniz rule}
-\index{generalized product rule}
-\index{binomial coefficient}
 \footnote{
   \citerpg{benisrael2002}{154}{3211829245},
   \citor{leibniz1710}
@@ -176,8 +173,27 @@ Then
 
 %--------------------------------------
 \begin{example}
-\[\deriv{^3}{x^3}\brs{\ff(x)\fg(x)} = \ff'''(x)\fg(x) + 3\ff''(x)\fg'(x) + 3\ff'(x)\fg''(x) + \ff(x)\fg'''(x)\]
+\exbox{
+  \deriv{^3}{x^3}\brs{\ff(x)\fg(x)} = \ff'''(x)\fg(x) + 3\ff''(x)\fg'(x) + 3\ff'(x)\fg''(x) + \ff(x)\fg'''(x)
+  }
 \end{example}
+
+%---------------------------------------
+\begin{theorem}[\thmd{Leibniz integration rule}]
+\footnote{
+  \citePpc{flanders1973}{615}{(1.1)}
+  \citer{talvila2001},
+  \citerpgc{knappb2005}{389}{0817632506}{Chapter VII},
+  \citerpgc{protter2012}{422}{1461210860}{Leibniz Rule. Theorem 1.},
+  \url{http://planetmath.org/encyclopedia/DifferentiationUnderIntegralSign.html}
+  }
+\label{thm:lir}
+%---------------------------------------
+  \thmbox{
+    \ddx \int_{\fa(x)}^{\fb(x)} \fg(t) \dt  
+      = \fg\brs{\fb(x)}\fb'(x) - \fg\brs{\fa(x)}\fa'(x)
+    }
+\end{theorem}
 
 
 
