--- a/common/expectation.tex
+++ b/common/expectation.tex
@@ -3,11 +3,11 @@
 % Daniel J. Greenhoe
 %============================================================================
 %======================================
-\chapter{Statistics}
+\chapter{Expectation operator}
 \label{chp:stats}
 %======================================
 %=======================================
-\section{Expectation operator}
+\section{Definitions}
 \index{expectation operator}
 %=======================================
 In a \structe{probability space} $\ps$, all probability information
@@ -59,20 +59,21 @@ variance is an indicator of the ``spread".
 \label{def:Mx}
 \label{def:pvar}
 \label{def:pVar}
-\index{mean}
-\index{variance}
 %---------------------------------------
 Let $\rvX$ be a \fncte{random variable} on the \structe{probability space} $\ps$.
 The {\bf mean} $\pmeanx$ and {\bf variance} $\pVar(\rvX)$ of $\rvX$ are
 \defbox{\begin{array}{FM>{\ds}rc>{\ds}l}
   (1).&The \fnctd{mean} $\pmeanx$ of $\rvX$ is 
-    & \pmeanx  &\eqd& \pEx\rvX 
+      & \pmeanx  &\eqd& \pEx\rvX 
   \\
   (2).&The \fnctd{variance} $\pVar(\rvX)$ or $\pvarx$ of $\rvX$ is 
-    & \pVar(\rvX) &\eqd& \pEx\left[(\rvX-\pEx\rvX)^2 \right]
+      & \pVar(\rvX) &\eqd& \pEx\left[(\rvX-\pEx\rvX)^2 \right]
 \end{array}}
 \end{definition}
 
+%=======================================
+\section{Properties}
+%=======================================
 The next theorem gives some useful relations for simple statistics.
 %---------------------------------------
 \begin{theorem}
