--- a/common/probspace.tex
+++ b/common/probspace.tex
@@ -235,19 +235,25 @@ The next definition presents a very important measure space---the \structe{proba
 
 %---------------------------------------
 \begin{definition}
+\footnote{
+  \citerpgc{papoulis1990}{52}{0137116985}{Indenpendent Events}
+  }
 \label{def:independence}
 \label{def:indepen}
 \label{def:independent}
 %---------------------------------------
 Let $\ps$ be a \structe{probability space} \xref{def:ps}.
 \defboxt{
-  Two \structe{event}s $x$ and $y$ in $\psL$ are \propd{independent} if
-  \\\indentx$\psp(x\meet y) = \psp(x)\psp(y)$
+  Two \structe{event}s $\setA$ and $\setB$ in $\psE$ are \propd{independent} if
+  \\\indentx$\psP(\setA\seti\setB) = \psP(\setA)\psP(\setB)$
   }
 \end{definition}
 
 %---------------------------------------
 \begin{definition}
+\footnote{
+  \citerpgc{papoulis1990}{45}{0137116985}{2-3 Conditional Probability and Indenpendence}
+  }
 \label{def:conprob}
 \label{def:conditional}
 \label{def:conP}
@@ -256,11 +262,9 @@ Let $\ps$ be a \structe{probability space} \xref{def:ps}.
 Let $x$ and $y$ be \structe{event}s in $\psL$.
 \defboxt{
   The \structd{conditional probability of $x$ given $y$} is defined as
-  \\\indentx$\ds\psp(x|y) \eqd \frac{\psp(x\meet y)}{\psp(y)}$
+  \\\indentx$\ds\psP(\setA|\setB) \eqd \frac{\psP(\setA\seti\setB)}{\psP(\setB)}$
   }
 \end{definition}
-
-
 
 %=======================================
 \section{Properties}
@@ -590,7 +594,7 @@ A \structe{probability space} $\ps$ for this single coin toss is as follows:
   \centering
   \exbox{
     \tbox{\includegraphics{graphics/lat8_l2e3_prob_coin.pdf}}
-    \begin{array}{rclrclrcl}
+    \begin{array}{|rcl|rcl}
       \psp(\emptyset) &=&0        & \psp(\setO)          &=& 1               \\
       \psp(\setA)     &=&(1-p)^2  & \psp(\setA\setu\setB)&=&(1-p)^2+2p(1-p)  \\
       \psp(\setB)     &=&2p(1-p)  & \psp(\setA\setu\setC)&=& 2p^2-2p+1       \\
