--- a/common/randvar.tex
+++ b/common/randvar.tex
@@ -58,13 +58,14 @@ mechanism that appears to be random.
   }
 %---------------------------------------
 Let $\ps$ be a \structe{probability space} \xref{def:ps}.
-A \fnctd{random variable} $\rvX$ is a function $\rvX$.
+\defboxt{
+  A \fnctd{random variable} $\rvX$ is any function in $\clFor$.
+  }
 \end{definition}
 
-
-%======================================
-\section{Properties}
-%======================================
+%=======================================
+\section{Functions of one random variable}
+%=======================================
 %---------------------------------------
 \begin{proposition}
 \label{prop:cdf_uniform}
@@ -85,9 +86,6 @@ with \fncte{cumulative distribution function} $\pcx(x)$.
   }
 \end{proposition}
 
-%=======================================
-\section{Functions of one random variable}
-%=======================================
 %---------------------------------------
 \begin{theorem}[\thmd{Probability integral transform}]
 \footnote{
@@ -244,10 +242,10 @@ Let $\ff(x)$ be a \structe{differentiable function} in $\clFrr$.
 \begin{theorem}
 \footnote{
   \citerppgc{papoulis1984}{95}{96}{0070484686}{``Fundamental Theorem"},
+  \citerpgc{papoulis1990}{157}{0137116985}{``Fundamental Theorem"}
   \citerp{papoulis}{93}, 
   \citerp{proakis}{30}
   }
-\label{thm:Y=f(X)}
 \label{thm:YfX}
 %---------------------------------------
 Let $\rvX$ and $\rvY$ be \fncte{random variable}s in $\clFrr$.
@@ -599,8 +597,8 @@ Let $a,b\in\R$.
 \end{footnotesize}
 \end{center}
 \caption{
-  $\rvY=X^2$
-  \label{fig:Y=X^2}
+  $\rvY=rvX^2$
+  \label{fig:Y=rvX^2}
   }
 \end{figure}
 %---------------------------------------
@@ -622,15 +620,15 @@ Let $\rvX$ and $\rvY$ be \fncte{random variable}s.
 \end{corollary}
 \begin{proof}
 %\begin{enumerate}
-%  \item The theorem can also be proved using \prefpp{thm:Y=f(X)}:
+%  \item The theorem can also be proved using \prefpp{thm:YfX}:
     \begin{enumerate}
       \item The roots of $y=x^2$ are $x_1=-\sqrt{y}$ and $x_2=+\sqrt{y}$. \label{item:YX2_roots}
       \item The derivative of $\ff(x)\eqd y=x^2$ is $\ff'(x)=2x$. \label{item:YX2_derivative}
       \item And so it follows that \ldots
-        \begin{align*}
+        {\begin{align*}
           \ppy(y)
             &= \sum_{n=1}^\xN \frac{\ppx(x_n)}{\abs{\ff'(x_n)}}
-            && \text{by \prefp{thm:Y=f(X)}}
+            && \text{by \prefp{thm:YfX}}
           \\&= \frac{\ppx(x_1)}{|\ff'(x_1)|} + \frac{\ppx(x_2)}{|\ff'(x_2)|}
             && \text{by definition of $\sum$}
           \\&= \frac{\ppx(-\sqrt{y})}{|\ff'(-\sqrt{y})|} + \frac{\ppx(\sqrt{y})}{|\ff'(\sqrt{y})|}
@@ -640,14 +638,14 @@ Let $\rvX$ and $\rvY$ be \fncte{random variable}s.
           \\&=    \left.\left.\frac{1}{2\sqrt{y}}\right[
                   \ppx(-\sqrt{y}) + \ppx( \sqrt{y}) \right]
             && \text{by \prope{linearity} of $+$ operation}
-        \end{align*}
+        \end{align*}}
     \end{enumerate}
 
 %  \item Alternatively
 %    \begin{enumerate}
 %      \item Let $h\to0$.
 %      \item lemma. First we show a useful relation for $\sqrt{y+h	}$.
-%            This relation is illustrated in \prefpp{fig:Y=X^2}.
+%            This relation is illustrated in \prefpp{fig:Y=rvX^2}.
 %            \begin{align*}
 %              \sqrt{y+h}
 %                &=    y_1 + \frac{1}{m} \Delta y
@@ -661,7 +659,7 @@ Let $\rvX$ and $\rvY$ be \fncte{random variable}s.
 %              \ppy(y)h
 %                &= \psp\setn{y\le Y < y+h}
 %              \\&= \psp\setn{y\le X^2 < y+h}
-%              \\&= \psp\setn{(y\le X^2 < y+h) \land (X<0)}+ \psp\setn{(y\le X^2 < y+h) \land (X\ge0)}
+%              \\&= \psp\setn{(y\le X^2 < y+h) \land (\rvX<0)}+ \psp\setn{(y\le X^2 < y+h) \land (\rvX\ge0)}
 %              \\&= \psp\setn{y\le X^2 < y+h | X<0}\psp\setn{\rvX<0} + \psp\setn{y\le X^2 < y+h | X\ge0}\psp\setn{\rvX\ge0}
 %              \\&= \psp\setn{-\sqrt{y}\le\rvX < -\sqrt{y+h} | X<0  } \psp\setn{\rvX<0} +
 %                   \psp\setn{+\sqrt{y}\le\rvX < +\sqrt{y+h} | X\ge0} \psp\setn{\rvX\ge0}
@@ -719,7 +717,7 @@ Let $\rvX$ and $\rvY$ be \fncte{random variable}s.
 \end{footnotesize}
 \end{center}
 \caption{
-  $Z=\tan\Theta$
+  $\rvZ=\tan\Theta$
   \label{fig:Z=tan0}
   }
 \end{figure}
@@ -730,7 +728,7 @@ Let $\rvX$ and $\rvY$ be \fncte{random variable}s.
   }
 \label{cor:ppztan}
 %---------------------------------------
-Let $Z=\tan\Theta$. Then
+Let $\rvZ=\tan\Theta$. Then
 \corbox{
   \brb{\rvZ=\tan\Theta}
   \quad\implies\quad
@@ -739,7 +737,7 @@ Let $Z=\tan\Theta$. Then
 \end{corollary}
 \begin{proof}
 %\begin{enumerate}
-%  \item The theorem can also be proved using \prefpp{thm:Y=f(X)}:
+%  \item The theorem can also be proved using \prefpp{thm:YfX}:
     \begin{enumerate}
       \item The roots of $z=\tan\theta$ are $\set{\theta_n=\atan{z}+n\pi}{n\in\Z}$. \label{item:ppztan_roots}
       \item The derivative of $z=\tan\theta$ is  $\ff'(\theta)=\sec^2 \theta$. \label{item:ppztan_derivative}
@@ -814,9 +812,13 @@ Let $Z=\tan\Theta$. Then
 %=======================================
 %---------------------------------------
 \begin{theorem}
+\footnote{
+  \citerpgc{papoulis1990}{160}{0137116985}{Example 5.16}
+  }
 \label{thm:pdfconv}
 %---------------------------------------
-Let $\rvX$, $\rvY$, and $\rvZ$ be \fncte{random variable}s. %
+Let $\rvX$, $\rvY$, and $\rvZ$ be \fncte{random variable}s.
+Let $\conv$ be the \ope{convolution} operator \xref{def:conv}.
 \thmbox{
   \brb{\begin{array}{FMD}
     (1). & $\rvZ \eqd \rvX + \rvY$ & and \\
@@ -900,21 +902,21 @@ Let $\rvX$, $\rvY$, and $\rvZ$ be \fncte{random variable}s. %
 %---------------------------------------
 Let
 \begin{liste}
-  \item $X_1$ and $X_2$ be random variables with joint distribution
-        $\ppx[X_1,X_2](x_1,x_2)$
+  \item $\rvX_1$ and $\rvX_2$ be random variables with joint distribution
+        $\ppx[\rvX_1,\rvX_2](x_1,x_2)$
   \item $\rvY_1=\ff_1(x_1,x_2)$ and $\rvY_2=\ff_2(x_1,x_2)$
 \end{liste}
 Then the joint distribution of $\rvY_1$ and $\rvY_2$ is
 \thmbox{
   \ppx[Y_1,Y_2](y_1,y_2)
-    = \frac{\ppx[X_1,X_2](x_1,x_2)}{|J(x_1,x_2)|}
-    = \frac{\ppx[X_1,X_2](x_1,x_2)}{
+    = \frac{\ppx[\rvX_1,\rvX_2](x_1,x_2)}{|J(x_1,x_2)|}
+    = \frac{\ppx[\rvX_1,\rvX_2](x_1,x_2)}{
         \left|\begin{array}{cc}
           \pderiv{\ff_1}{x_1} & \pderiv{\ff_1}{x_2}   \\
           \pderiv{\ff_2}{x_1} & \pderiv{\ff_2}{x_2}
         \end{array}\right|
         }
-    = \frac{\ppx[X_1,X_2](x_1,x_2)}{
+    = \frac{\ppx[\rvX_1,\rvX_2](x_1,x_2)}{
         \pderiv{\ff_1}{x_1}\pderiv{\ff_2}{x_2} -
         \pderiv{\ff_1}{x_2}\pderiv{\ff_2}{x_1}
         }
@@ -927,7 +929,7 @@ Then the joint distribution of $\rvY_1$ and $\rvY_2$ is
 %---------------------------------------
 Let $\rvX$ and $\rvY$ be random variables with joint distribution
 $\ppxy(x,y)$ and
-\[ R^2 \eqd X^2 + Y^2 \hspace{10ex} \Theta \eqd \atan\frac{Y}{\rvX}. \]
+\[ R^2 \eqd X^2 + Y^2 \hspace{10ex} \Theta \eqd \atan\frac{\rvY}{\rvX}. \]
 Then
 \propbox{
   \ppx[R,\Theta](r,\theta)
@@ -970,7 +972,7 @@ Then
 %---------------------------------------
 Let $\rvX\sim\pN{0}{\sigma^2}$ and $\rvY\sim\pN{0}{\sigma^2}$ be
 independent random variables and
-\\\indentx$R^2 \eqd X^2 + Y^2 \hspace{10ex} \Theta \eqd \atan\frac{Y}{\rvX}.$\\
+\\\indentx$R^2 \eqd X^2 + Y^2 \hspace{10ex} \Theta \eqd \atan\frac{\rvY}{\rvX}.$\\
 Then
 \propbox{\begin{array}{FMrcl}
   1. & $R$ and $\Theta$ are independent with joint distribution
@@ -1006,19 +1008,25 @@ Then
 %---------------------------------------
 \begin{proposition}
 %---------------------------------------
-Let $X\sim\pN{\pmeanx}{\pvarx}$ and $\rvY\sim\pN{\pmeany}{\pvary}$ be
-jointly Gaussian random variables and $\pvarxy=\cov{\rvX}{Y}$.
-Then
+Let $\rvX$ and $\rvY$ be \fncte{random variable}s 
+with covariance $\pvarxy$ on a
+\structe{probability space} $\ps$.
 \propbox{
-  \psp\setn{\rvX>Y} = \pQ\left( \frac{-\pmeanx + \pmeany}{\pvarx+\pvary-2\pvarxy}\right)
+  \brb{\begin{array}{FMD}
+      (A).&$\rvX$ is \prope{Gaussian} with $\pN{\pmeanx}{\pvarx}$ & and 
+    \\(B).&$\rvX$ is \prope{Gaussian} with $\pN{\pmeany}{\pvary}$ & and
+    \\(C).&$\pvarxy=\cov{\rvX}{\rvY}$
+  \end{array}}
+  \implies
+  \brb{\psp\setn{\rvX>\rvY} = \pQ\brp{\frac{-\pmeanx + \pmeany}{\pvarx+\pvary-2\pvarxy}}}
   }
 \end{proposition}
 \begin{proof}
 Because $\rvX$ and $\rvY$ are jointly Gaussian,
-their linear combination $Z=X-Y$ is also Gaussian.
+their linear combination $\rvZ=rvX-\rvY$ is also Gaussian.
 A Gaussian distribution is completely defined by its mean and variance.
-So, to determine the distribution of $Z$,
-we just have to determine the mean and variance of $Z$.
+So, to determine the distribution of $\rvZ$,
+we just have to determine the mean and variance of $\rvZ$.
 \begin{align*}
   \pE Z
     &= \pE\rvX - \pE Y
@@ -1027,15 +1035,15 @@ we just have to determine the mean and variance of $Z$.
 \\
   \var Z
     &= \pE Z^2 - (\pE Z)^2
-  \\&= \pE (X-Y)^2 - (\pE\rvX - \pE Y)^2
-  \\&= \pE (X^2-2XY+Y^2) - [(\pE\rvX)^2 -2\pE\rvX \pE Y + (\pE Y)^2 ]
+  \\&= \pE (\rvX-\rvY)^2 - (\pE\rvX - \pE Y)^2
+  \\&= \pE (\rvX^2-2XY+Y^2) - [(\pE\rvX)^2 -2\pE\rvX \pE Y + (\pE Y)^2 ]
   \\&= [\pE X^2- (\pE\rvX)^2]  + [Y^2- (\pE Y)^2] - 2[\pE XY - \pE\rvX \pE Y]
-  \\&= \var\rvX + \var Y - 2\cov{\rvX}{Y}
+  \\&= \var\rvX + \var Y - 2\cov{\rvX}{\rvY}
   \\&\eqd \pvarx + \pvary -2\pvarxy
 \\
 \\
-  \psp\setn{\rvX>Y}
-    &= \psp\setn{\rvX-Y>0}
+  \psp\setn{\rvX>\rvY}
+    &= \psp\setn{\rvX-\rvY>0}
   \\&= \psp\setn{Z>0}
   \\&= \left.\pQ\left(\frac{z-\pE Z}{\var Z} \right)\right|_{z=0}
   \\&= \pQ\left(\frac{0-\pmeanx+\pmeany}{\pvarx+\pvary-2\pvarxy} \right)
@@ -1068,6 +1076,6 @@ Let $\ppx[\xN](x)$ be the \fncte{probability density function} of
 $\rvY\eqd\sum_{n=1}^{\xN}\rvX_n$.
 Some of these distributions are illustrated in \prefpp{fig:pdf_uniform_sums}.
 Note that the distributions of the sequence $\seqn{\ppx[1],\ppx[2],\ppx[3],\ldots}$
-are all \fncte{B-spline}s \xref{def:Bspline} and all form a
-\prope{partition of unity} \xref{def:pun}.
+are all \fncte{B-spline}s\ifsxref{spline}{def:Bspline} and all form a
+\prope{partition of unity}\ifsxref{partuni}{def:pun}.
 \end{example}
