--- a/common/bib/mathmisc.bib
+++ b/common/bib/mathmisc.bib
@@ -144,22 +144,6 @@
   urla         = {http://www.amazon.com/dp/0671628186},
   }
 
-@book{billingsley1995,
-  author       = {Patrick Billingsley},
-  title        = {Probability And Measure},
-  year         = {1995},
-  edition      = {3},
-  pages        = {608},
-  publisher    = {Wiley},
-  language     = {English},
-  series       = {Wiley series in probability and mathematical statistics},
-  isbn10       = {0-471-00710-2},
-  isbn         = {978-0471007104},
-  url          = {http://books.google.com/books?vid=ISBN0471007102},
-  urlw         = {http://www.worldcat.org/isbn/0471007102},
-  urla         = {http://www.amazon.com/dp/0471007102},
-  }
-
 @book{bogart2000,
   author       = {Kenneth P. Bogart},
   title        = {Introductory Combinatorics},
@@ -431,15 +415,6 @@
   url          = {http://www.amazon.com/dp/0471257087},
   }
   
-@book{feller1971,
-  author       = {William Feller},
-  title        = {An Introduction to Probability Theory and its Applications Volume II},
-  edition      = {2},
-  year         = {1971},
-  publisher    = {John Wiley \& Sons/ Mei Ya Publications},
-  address      = {New York/Taipei},
-  }
-  
 @book{ferland2009,
   title        = {Discrete Mathematics: An Introduction to Proofs and Combinatorics},
   shorttitle   = {Discrete Mathematics\ldots},
@@ -453,6 +428,19 @@
   isbn         = {0618415386},
   isbn13       = {9780618415380},
   } 
+
+@incollection{foulis2006,
+  author       = {David J. Foulis and Richard J. Greechie and Maria Louisa Dalla Chiara and Roberto Giuntini},
+  title        = {Quantum Logic},
+  booktitle    = {Mathematical Tools for Physicists},
+  pages        = {439--473},
+  year         = {2006},
+  editor       = {George L. Trigg},
+  publisher    = {Wiley-VCH},
+  isbn         = {3527607250},
+  isbn13       = {9783527607259},
+  url          = {http://books.google.com/books?vid=ISBN3527607250}
+  }
 
 @article{frechet1930a,
   author       = {Maurice Fr/'echet},
@@ -784,22 +772,6 @@
   year         = {1933},
   }
   
-@book{kolmogorov1933e2,
-  author       = {Andrei Nikolaevich Kolmogorov},
-  translator   = {Nathan Morrison},
-  title        = {Foundations of the theory of probability},
-  note         = {1956 2nd edition English translation of A. N. Kolmogorov's 1933 ``Grundbegriffe der Wahrscheinlichkeitsrechnung"},
-  edition      = {2},
-  publisher    = {Chelsea Publishing Company},
-  address      = {New Yourk},
-  language     = {English},
-  year         = {1933},
-  pages        = {84},
-  asin         = {B0006AUOGO},
-  isbn         = {B0006AUOGO},
-  url          = {http://statweb.stanford.edu/~cgates/PERSI/Courses/Phil166-266/Kolmogorov-Foundations.pdf},
-  }
-  
 @book{korn,
   author       = {Granino A. Korn and Theresea M. Korn},
   title        = {Mathematical Handbook for Scientists and Engineers; Definitions, Theorems, and Formulas for Reference and Review},
@@ -811,17 +783,6 @@
   language     = {English},
   url          = {http://books.google.com/books?vid=ISBN0486411478},
   urlw         = {http://www.worldcat.org/isbn/0486411478},
-  }
-
-@book{matheron1975,
-  author       = {Georges Matheron},
-  title        = {Random Sets and Integral Geometry},
-  publisher    = {John Wiley \& Sons},
-  address      = {New York}, 
-  year         = {1975},
-  isbn         = {0-471-57621-2},
-  note         = {Library QA273.5.M37},
-  url          = {http://www.worldcat.org/isbn/0471576212},
   }
 
 @book{mathews,
@@ -848,23 +809,6 @@
   url          = {http://maxima.sourceforge.net/documentation.html},
   language     = {English},
   pages        = {1046},
-  }
-
-@book{narens2007,
-  author       = {Louis Narens},
-  title        = {Theories of Probability: An examination of logical and qualitative foundations},
-  shorttitle   = {Theories of Probability\ldots},
-  series       = {Advanced series on mathematical psychology},
-  volume       = {2},
-  year         = {2007},
-  month        = {January},
-  publisher    = {World Scientific},
-  pages        = {219},
-  isbn         = {9789812708014},
-  isbn10       = {9812708014},
-  url          = {http://www.amazon.com/dp/9812708014},
-  urlw         = {http://www.worldcat.org/isbn/9812708014},
-  urlg         = {http://books.google.com/books?vid=ISBN9812708014},
   }
 
 @article{narens2014,
@@ -972,29 +916,18 @@
   language     = {English},
   }
 
-@book{svozil,
-  author       = {Karl Svozil},
-  title        = {Randomness \& Undecidability in Physics},
-  publisher    = {World Scientific},
-  year         = {1994},
-  isbn         = {981020809X},
-  oclc         = {26014466},
-  language     = {English},
-  url          = {http://books.google.com/books?vid=ISBN981020809X},
-  urlw         = {http://www.worldcat.org/isbn/981020809X},
-  }
-
-@incollection{foulis2006,
-  author       = {David J. Foulis and Richard J. Greechie and Maria Louisa Dalla Chiara and Roberto Giuntini},
-  title        = {Quantum Logic},
-  booktitle    = {Mathematical Tools for Physicists},
-  pages        = {439--473},
-  year         = {2006},
-  editor       = {George L. Trigg},
-  publisher    = {Wiley-VCH},
-  isbn         = {3527607250},
-  isbn13       = {9783527607259},
-  url          = {http://books.google.com/books?vid=ISBN3527607250}
+@book{weisstein2002,
+  isbn10       = {1420035223},
+  isbn         = {9781420035223},
+  title        = {CRC Concise Encyclopedia of Mathematics},
+  author       = {Eric W. Weisstein},
+  edition      = {2, revised},
+  publisher    = {CRC Press},
+  year         = {2002},
+  pages        = {3252},
+  url          = {http://books.google.com/books?vid=ISBN1420035223},
+  urla         = {http://www.amazon.com/dp/1420035223},
+  urlw         = {http://www.worldcat.org/isbn/1420035223},
   }
 
 @book{zayed,
@@ -1013,6 +946,12 @@
   urlw         = {http://www.worldcat.org/oclc/33442469},
   urla         = {http://www.amazon.com/dp/0849378516},
   }
+
+
+
+
+
+
 
 
 @book{aristotle,
@@ -1443,62 +1382,6 @@
   url          = {http://neo.jpl.nasa.gov/news/fireball_130301.html},
   }
 
-%=======================================
-% probability
-%=======================================
-@article{bernoulli1783,
-  author       = {Daniel Bernoulli},
-  year         = {1783},
-  title        = {Specimen Theoriae Novae de Mensura Sortis},
-  journal      = {Commentarri Academiae Scientiarum Imperialis Petropolitanae},
-  volume       = {V},
-  pages        = {175--192},
-  note         = {journal: Papers of the Imperial Academy of Sciences in Petersburg},
-  }
-
-@article{bernoulli1783e,
-  author       = {Daniel Bernoulli},
-  translator   = {Louise Sommer},
-  year         = {1783},
-  title        = {Expectation of a New Theory on the Measurement of Risk},
-  journal      = {Econometrica},
-  volume       = {22},
-  number       = {1},
-  url          = {http://msuweb.montclair.edu/~lebelp/BernoulliDRiskEc19541738.pdf},
-  urle         = {http://www.econ.ucsb.edu/~tedb/Courses/GraduateTheoryUCSB/Bernoulli.pdf},
-  urlj         = {http://www.jstor.org/stable/1909829},
-  language     = {English},
-  note         = {This article was originally published in Latin and has been translated into English.
-                  The English version was published January 1954.},
-  pages        = {23--36},
-  }
-
-
-@book{cover,
-  author       = {T.M. Cover and Joy A. Thomas},
-  title        = {Elements of Information Theory},
-  publisher    = {John Wiley \& Sons, Inc.},
-  address      = {New York},
-  year         = {1991},
-  isbn         = {0-471-06259-6},
-  urlw         = {http://www.worldcat.org/isbn/0471062596},
-  url          = {http://www.amazon.com/dp/0471062596},
-  urlx         = {http://www-isl.stanford.edu/~jat/eit2/index.shtml},
-  language     = {English},
-  oclc         = {22305429},
-  }
-
-@book{gallager,
-  author       = {Robert G. Gallager},
-  title        = {Information Theory and Reliable Communication},
-  publisher    = {Wiley},
-  year         = {1968},
-  isbn         = {0471290483},
-  url          = {http://www.worldcat.org/isbn/0471290483},
-  urla         = {http://www.amazon.com/dp/0471290483},
-  urlg         = {http://www.ieee.org/organizations/history\_center/legacies/gallager.html},
-  }
-
 @book{jeffrey1995,
   author       = {Alan Jeffrey},
   title        = {Handbook of Mathematical Formulas and Integrals},
@@ -1528,29 +1411,6 @@
   urlw         = {http://www.worldcat.org/isbn/0080556841},
   urla         = {http://www.amazon.com/dp/0080556841},
   }
-  
-
-
-@book{montmort1713,
-  isbn         = {978-0-8218-3781-8},
-  isbn10       = {0821837818},
-  url          = {http://books.google.com/books?vid=ISBN9780821837818},
-  editor       = {Pierre R/'emond de Montmort},
-  authorx      = {Nicolas Bernoulli},
-  title        = {Essay D'analyse sur Les Jeux de Hazard},
-  year         = {1713},
-  edition      = {2},
-  language     = {French},
-  note         = {``Essays on the analysis of games of chance", 2006 AMS reprint edition,
-                  An English translation about the \emph{St. Petersburg Paradox} correspondence 
-                  by Richard J. Pulskamp called ``Correspondence of Nicolas Bernoulli concerning the St. Petersburg Game"  
-                  is available at \url{http://www.cs.xu.edu/math/Sources/Montmort/stpetersburg.pdf}},
-  address      = {Providence, Rhode Island},
-  publisher    = {American Mathematical Society},
-  urlg         = {http://books.google.com/books?id=Cqk_AAAAcAAJ},
-  pages        = {414},
-  volume       = {307},
-  }
 
 @article{muniz1953,
   author       = {Eddie Ortiz Muniz},
@@ -1575,94 +1435,15 @@
   pages        = {266},
   }
   
-@book{papoulis,
-  isbn         = {0070484775},
-  oclc         = {22704249},
-  author       = {Anthanasios Papoulis},
-  title        = {Probability, Random Variables, and Stochastic Processes},
-  edition      = {3},
-  publisher    = {McGraw-Hill},
-  address      = {New York},
-  year         = {1991},
-  urlw         = {http://www.worldcat.org/isbn/0070484775},
-  url          = {http://books.google.com/books?vid=ISBN0070484775},
-  language     = {English},
+@book{wiener1948,
+  title        = {Cybernetics Or Communication And Control In The Animal And The Machine},
+  author       = {Norbert Wiener},
+  year         = {1948},
+  url          = {https://archive.org/details/CyberneticsOrCommunicationAndControlInTheAnimalAndTheMachineNorbertWiener/page/n0},
+  edition      = {1},
+  publisher    = {M.I.T. Press},
+  address      = {Cambridge, MA, USA},
   }
-
-@book{papoulis1984,
-  isbn         = {0070484686},
-  isbn         = {9780070484689},
-  author       = {Anthanasios Papoulis},
-  title        = {Probability, Random Variables, and Stochastic Processes},
-  series       = {McGraw-Hill Series in Electrical Engineering},
-  edition      = {2},
-  publisher    = {McGraw-Hill Book Company},
-  address      = {New York},
-  year         = {1984},
-  url          = {http://books.google.com/books?vid=ISBN0070484686},
-  urla         = {http://www.amazon.com/dp/0070484686},
-  pages        = {576},
-  language     = {English},
-  }
-
-@book{poincare_calc_prob,
-  author       = {Henri Poincar/'e},
-  title        = {Calcul Des Probabilit/'es},
-  year         = {1912},
-  publisher    = {De L'ecole Polytechnique},
-  address      = {Paris},
-  url          = {http://www.archive.org/details/calculdeprobabil00poinrich},
-  language     = {French},
-  }
-
-@book{ross,
-  author       = {Sheldon Ross},
-  title        = {A First Course in Probability},
-  edition      = {5},
-  pages        = {514+xiv},
-  publisher    = {Prentice Hall},
-  address      = {Upper Saddle River, New Jersey, USA 07458},
-  year         = {1998},
-  language     = {English},
-  isbn         = {0-13-746314-6},
-  isbn13       = {978-0137463145},
-  oclc         = {60183780},
-  url          = {http://www.amazon.com/dp/0137463146},
-  urlw         = {http://www.worldcat.org/isbn/0137463146},
-  }
-
-@book{szekely1986,
-  author       = {G/'abor J. Sz/'ekely},
-  title        = {Paradoxes in Probability Theory and Mathematical Statistics},
-  series       = {Mathematics and Its Applications},
-  year         = {1986},
-  month        = {January 31},
-  publisher    = {Springer, D. Reidel Publishing Company, Kluwer Academic Publishers Group},
-  address      = {Dordrecht/Boston/Lancaster/Tokyo},
-  isbn         = {978-9027718990},
-  isbn10       = {9027718997},
-  language     = {English},
-  pages        = {262},
-  urlg         = {http://books.google.com/books?vid=ISBN9027718997},
-  urlw         = {http://www.worldcat.org/isbn/9027718997},
-  urla         = {http://www.amazon.com/dp/9027718997},
-  }
-
-@book{trivedi2016,
-  isbn10       = {1119314208},
-  isbn         = {9781119314202},
-  title        = {Probability and Statistics with Reliability, Queuing, and Computer Science Applications},
-  author       = {Kishor S. Trivedi},
-  edition      = {2},
-  publisher    = {John Wiley \& Sons},
-  year         = {2016},
-  pages        = {880},
-  urlg         = {http://books.google.com/books?vid=ISBN1119314208},
-  }
-
-Length	880 pages
-
-
   
 @article{weyl1935,
   title        = {Emmy Noether},
@@ -1786,15 +1567,5 @@ Length	880 pages
   year         = {2009},
   month        = {December},
   url          = {https://www.vibrationresearch.com/articles/fatigue_kurtosis.html},
-  }
-  
-@book{wiener1948,
-  title        = {Cybernetics Or Communication And Control In The Animal And The Machine},
-  author       = {Norbert Wiener},
-  year         = {1948},
-  url          = {https://archive.org/details/CyberneticsOrCommunicationAndControlInTheAnimalAndTheMachineNorbertWiener/page/n0},
-  edition      = {1},
-  publisher    = {M.I.T. Press},
-  address      = {Cambridge, MA, USA},
   }
   
