--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1541,6 +1541,7 @@
 \newcommand{\psO} [0] {\Omega}       % probability space outcomes
 \newcommand{\psE} [0] {\BbbE}        % probability space events
 \newcommand{\psP} [0] {\mathsfup{P}} % probability space probability measure
+\newcommand{\psPcl}[0]{\clF{\psE}{\intcc{0}{1}}} % class of functions E-->[0,1] to which P belongs
 
 
 
@@ -1552,18 +1553,18 @@
 %--------------------------------------
 % probability density functions
 %--------------------------------------
- \newcommand{\pp}    [1][p]{\mathfnct{#1}}% pdf (probability density function)
- \newcommand{\pc}    [1][c]{\mathfnct{#1}}% cdf (cummulative distribution function)
+%20181122deprecated% \newcommand{\pp}    [1][p]{\mathfnct{#1}}% pdf (probability density function)
+%20181122deprecated% \newcommand{\pc}    [1][c]{\mathfnct{#1}}% cdf (cummulative distribution function)
+ \newcommand{\pp}{\mathfnct{p}}% pdf (probability density function)
+ \newcommand{\pc}{\mathfnct{c}}% cdf (cummulative distribution function)
  \newcommand{\ppx}   [1][X]{\pp_{\mbox{\tiny$\fnct{#1}$}}}% pdf of X
  \newcommand{\pcx}   [1][X]{\pc_{\mbox{\tiny$\fnct{#1}$}}}% cdf of X
-
  \newcommand{\ppy}   [0]{\ppx[Y]}
  \newcommand{\ppz}   [0]{\ppx[Z]}
  \newcommand{\pcy}   [0]{\pcx[Y]}
  \newcommand{\pcz}   [0]{\pcx[Z]}
  \newcommand{\ppr}   [0]{\ppx[R]}
  \newcommand{\ppth}  [0]{\ppx[\theta]}
-
  \newcommand{\ppxy}  [0]{\ppx[XY]}
  \newcommand{\ppyx}  [0]{\ppx[YX]}
  \newcommand{\ppxgy} [0]{\ppx[X|Y]} % pdf of X given Y
