moved random variable definition from randvar.tex to pdfcdf.tex because pdf and cdf definitions depend on the concept of random variable, and made randvar.tex a chapter/appendix about operations on random variables. Happy Thanksgiving!!! ^___^

--- a/common/randvar.tex
+++ b/common/randvar.tex
@@ -3,65 +3,9 @@
 % Daniel J. Greenhoe
 %============================================================================
 %======================================
-\chapter{Random Variables}
+\chapter{Operations on Random Variables}
 \label{chp:rval}
 %======================================
-\qboxnpq
-  {Joseph Leonard Doob (1910--2004), pioneer of and key contributor to mathematical probability\footnotemark}
-  {../common/people/doobjl_dartmouthedu.jpg}
-  {While writing my book I had an argument with Feller.
-   He asserted that everyone said ``random variable" and I asserted that everyone said ``chance variable."
-   We obviously had to use the same name in our books, so we decided the issue by a stochastic procedure.
-   That is, we tossed for it and he won.}
-\citetblt{
-  quote: & \citerp{snell1997}{307}, \citerp{snell2005}{251}\\
-  %reference: & \citerpg{suhov2008}{238}{0521847672}\\
-  image: & \url{http://www.dartmouth.edu/~chance/Doob/conversation.html}
-  }
-%======================================
-\section{Definitions}
-%======================================
-The concept of the \fncte{random variable} is widely used in probability and
-random processes.
-Before discussing what a \fncte{random variable} \emph{is}, 
-note two things that a \fncte{random variable} is \emph{not} (next remark).
-%---------------------------------------
-\begin{remark}
-\footnote{
-  \citerpg{miller2006}{130}{0471458929},
-  \citerpgc{feldman2010}{4}{3642051588}{``The name ``random variable" is actually a misnomer, since it is not random and not a variable.\ldots the \fncte{random variable} simply maps each point (outcome) in the sample space to a number on the real line\ldots Technically, the space into which the \fncte{random variable} maps the sample space may be more general than the real line\ldots"},
-  \citerpg{curry2011}{4}{3642166180},
-  \citerpgc{trivedi2016}{2.1}{1119314208}{``The term ``random variable" is actually a misnomer, since a \fncte{random variable} $\rvX$ is really a function whose domain is the sample space $S$, and whose range is the set of all real numbers, $\R$."}
-  }
-%---------------------------------------
-As pointed out by others, the term ``random variable" is a ``misnomer":
-\\\rembox{
-  \begin{array}{NM}
-    \imark & A \fncte{random variable} is {\bf not random}.\\
-    \imark & A \fncte{random variable} is {\bf not a variable}.
-  \end{array}}
-\end{remark}
-
-What is it then? It is a \structe{function} (next definition).
-In particular, it is a function that maps from an underlying stochastic process into $\R$.
-Any ``\prope{randomness}" (whatever that means) it may \emph{appear} to have comes from the stochastic process it
-is mapping \emph{from}. But the function itself (the \fncte{random variable} itself) is very deterministic and well-defined.
-What gives it the appearance of being random is that the outcome $\omega$
-of the experiment appears to be random to the observer.
-So the \fncte{random variable} $\rvX(\omega)$ is simply a function of an underlying
-mechanism that appears to be random.
-%---------------------------------------
-\begin{definition}
-\index{random variable}
-\footnote{
-  \citerp{papoulis}{63}
-  }
-%---------------------------------------
-Let $\ps$ be a \structe{probability space} \xref{def:ps}.
-\defboxt{
-  A \fnctd{random variable} $\rvX$ is any function in $\clFor$.
-  }
-\end{definition}
 
 %=======================================
 \section{Functions of one random variable}
