--- a/common/pdfcdf.tex
+++ b/common/pdfcdf.tex
@@ -8,8 +8,66 @@
 \label{chp:pdfs}
 %======================================
 
+\qboxnpq
+  {Joseph Leonard Doob (1910--2004), pioneer of and key contributor to mathematical probability\footnotemark}
+  {../common/people/doobjl_dartmouthedu.jpg}
+  {While writing my book I had an argument with Feller.
+   He asserted that everyone said ``random variable" and I asserted that everyone said ``chance variable."
+   We obviously had to use the same name in our books, so we decided the issue by a stochastic procedure.
+   That is, we tossed for it and he won.}
+\citetblt{
+  quote: & \citerp{snell1997}{307}, \citerp{snell2005}{251}\\
+  %reference: & \citerpg{suhov2008}{238}{0521847672}\\
+  image: & \url{http://www.dartmouth.edu/~chance/Doob/conversation.html}
+  }
+%======================================
+\section{Random variables}
+%======================================
+The concept of the \fncte{random variable} is widely used in probability and
+random processes.
+Before discussing what a \fncte{random variable} \emph{is}, 
+note two things that a \fncte{random variable} is \emph{not} (next remark).
+%---------------------------------------
+\begin{remark}
+\footnote{
+  \citerpg{miller2006}{130}{0471458929},
+  \citerpgc{feldman2010}{4}{3642051588}{``The name ``random variable" is actually a misnomer, since it is not random and not a variable.\ldots the \fncte{random variable} simply maps each point (outcome) in the sample space to a number on the real line\ldots Technically, the space into which the \fncte{random variable} maps the sample space may be more general than the real line\ldots"},
+  \citerpg{curry2011}{4}{3642166180},
+  \citerpgc{trivedi2016}{2.1}{1119314208}{``The term ``random variable" is actually a misnomer, since a \fncte{random variable} $\rvX$ is really a function whose domain is the sample space $S$, and whose range is the set of all real numbers, $\R$."}
+  }
+%---------------------------------------
+As pointed out by others, the term ``random variable" is a ``misnomer":
+\\\rembox{
+  \begin{array}{NM}
+    \imark & A \fncte{random variable} is {\bf not random}.\\
+    \imark & A \fncte{random variable} is {\bf not a variable}.
+  \end{array}}
+\end{remark}
+
+What is it then? It is a \structe{function} (next definition).
+In particular, it is a function that maps from an underlying stochastic process into $\R$.
+Any ``\prope{randomness}" (whatever that means) it may \emph{appear} to have comes from the stochastic process it
+is mapping \emph{from}. But the function itself (the \fncte{random variable} itself) is very deterministic and well-defined.
+What gives it the appearance of being random is that the outcome $\omega$
+of the experiment appears to be random to the observer.
+So the \fncte{random variable} $\rvX(\omega)$ is simply a function of an underlying
+mechanism that appears to be random.
+%---------------------------------------
+\begin{definition}
+\index{random variable}
+\footnote{
+  \citerp{papoulis}{63}
+  }
+\label{def:randvar}
+%---------------------------------------
+Let $\ps$ be a \structe{probability space} \xref{def:ps}.
+\defboxt{
+  A \fnctd{random variable} $\rvX$ is any function in $\clFor$.
+  }
+\end{definition}
+
 %=======================================
-\section{Definitions}
+\section{Probability distributions}
 %=======================================
 The probability information about $\sigma$-algebra $\psE$ in a
 \structe{probability space} \xref{def:ps} is completely
@@ -25,17 +83,29 @@ information in terms of the \fncte{probability density function} or the
 \label{def:pdf}
 \label{def:cdf}
 %---------------------------------------
-Let $\ps$ be a \structe{probability space} \xref{def:ps}.
-Let $\pc(x)$ be a \fncte{function} in $\psPcl$ 
-and $\pp(x)$ a function in $\clF{\psE}{\R}$.
+Let $\rvX$ be a \fncte{random variable} \xref{def:randvar}
+on a \structe{probability space} $\ps$.
+%Let $\pcx(x)$ be a \fncte{function} in $\psPcl$ and $\ppx(x)$ a function in $\clF{\psE}{\R}$.
 \defbox{\begin{array}{MM}
-  $\pc(x)$ is a \fnctd{cummulative distribution function} &(\fnctd{cdf}) on $\ps$ if 
-    \\\mc{2}{l}{\indentx\ds\pcx(x) \eqd \psP\setn{\rvX < x }}
+  $\rvX$ has \fnctd{cummulative distribution function} &(\fnctd{cdf}) $\pcx(x)$ if 
+    \\\mc{2}{l}{\indentx\ds\pcx(x) \eqd \psP\set{x\in\psE}{\rvX<x}}
     \\
-  $\pp(x)$ is a \fnctd{probability density function}      &(\fnctd{pdf}) on $\ps$ if 
-    \\\mc{2}{l}{\indentx\ds\ppx(x) \eqd \ddx\pcx(x) \eqd \ddx\psP\setn{\rvX < x }}
+  $\rvX$ \fnctd{probability density function}      &(\fnctd{pdf}) $\ppx(x)$ if 
+    \\\mc{2}{l}{\indentx\ds\ppx(x) \eqd \ddx\pcx(x) \eqd \ddx\psP\set{x\in\psE}{\rvX < x }}
 \end{array}}
 \end{definition}
+
+%---------------------------------------
+\begin{remark}
+%---------------------------------------
+Suppose $\rvX$ be a \structe{random variable} on a \structe{probability space} $\ps$.
+Note that 
+\\\indentx\begin{tabular}{cl}
+    \imark & Both $\rvX$ and $\psE$ are \fncte{function}s.
+  \\\imark & But $\rvX$ is a {function} that maps from $\psO$ to $\R$,
+  \\\imark & whereas $\psP$ is a {function} that maps from $\psE$ to $\R$.
+\end{tabular}
+\end{remark}
 
 %---------------------------------------
 \begin{definition}
