Comparison of cross-correlation Rxy(m) definitions and resulting Sxy(w) results

--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -70,6 +70,20 @@
   address      = {New York/Taipei},
   }
 
+@book{helstrom1991,
+  isbn10       = {0023535717},
+  isbn         = {9780023535710},
+  title        = {Probability and Stochastic Processes for Engineers},
+  series       = {Maxwell Macmillan international editions in engineering},
+  author       = {Carl W. Helstrom},
+  edition      = {2},
+  publisher    = {Macmillan},
+  year         = {1991},
+  pages        = {610},
+  url          = {http://books.google.com/books?vid=ISBN0023535717},
+  urla         = {http://www.amazon.com/dp/0023535717},
+  }
+
 @book{kay1988,
   isbn10       = {8131733564},
   isbn         = {9788131733561},
@@ -81,27 +95,6 @@
   publisher    = {Prentice Hall},
   year         = {1988},
   pages        = {543},
-  }
-
-@book{montmort1713,
-  isbn         = {978-0-8218-3781-8},
-  isbn10       = {0821837818},
-  url          = {http://books.google.com/books?vid=ISBN9780821837818},
-  editor       = {Pierre R/'emond de Montmort},
-  authorx      = {Nicolas Bernoulli},
-  title        = {Essay D'analyse sur Les Jeux de Hazard},
-  year         = {1713},
-  edition      = {2},
-  language     = {French},
-  note         = {``Essays on the analysis of games of chance", 2006 AMS reprint edition,
-                  An English translation about the \emph{St. Petersburg Paradox} correspondence 
-                  by Richard J. Pulskamp called ``Correspondence of Nicolas Bernoulli concerning the St. Petersburg Game"  
-                  is available at \url{http://www.cs.xu.edu/math/Sources/Montmort/stpetersburg.pdf}},
-  address      = {Providence, Rhode Island},
-  publisher    = {American Mathematical Society},
-  urlg         = {http://books.google.com/books?id=Cqk_AAAAcAAJ},
-  pages        = {414},
-  volume       = {307},
   }
 
 @book{gallager,
@@ -140,6 +133,27 @@
   isbn         = {0-471-57621-2},
   note         = {Library QA273.5.M37},
   url          = {http://www.worldcat.org/isbn/0471576212},
+  }
+
+@book{montmort1713,
+  isbn         = {978-0-8218-3781-8},
+  isbn10       = {0821837818},
+  url          = {http://books.google.com/books?vid=ISBN9780821837818},
+  editor       = {Pierre R/'emond de Montmort},
+  authorx      = {Nicolas Bernoulli},
+  title        = {Essay D'analyse sur Les Jeux de Hazard},
+  year         = {1713},
+  edition      = {2},
+  language     = {French},
+  note         = {``Essays on the analysis of games of chance", 2006 AMS reprint edition,
+                  An English translation about the \emph{St. Petersburg Paradox} correspondence 
+                  by Richard J. Pulskamp called ``Correspondence of Nicolas Bernoulli concerning the St. Petersburg Game"  
+                  is available at \url{http://www.cs.xu.edu/math/Sources/Montmort/stpetersburg.pdf}},
+  address      = {Providence, Rhode Island},
+  publisher    = {American Mathematical Society},
+  urlg         = {http://books.google.com/books?id=Cqk_AAAAcAAJ},
+  pages        = {414},
+  volume       = {307},
   }
 
 @book{narens2007,
