--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -158,7 +158,7 @@
 \newcommand{\vCc}[0]{\C^\infty}
 \newcommand{\vLL}[0]{\mbfitsansL^2}
 \newcommand{\vII}[0]{\mbfitsansI^2}
-
+\newcommand{\conj}{\ast}
 %--------------------------------------
 % Algebraic structures
 %--------------------------------------
@@ -1601,9 +1601,9 @@
  \newcommand{\pvarxy}[0]   {{\sigma_{\mathsfup{xy}}}}
  \newcommand{\pQ}[0]       {{\mathfnct{Q}}}  % expected value
  \newcommand{\pE}{\mathfnct{{E}}}% expectation operator
- \newcommand{\Eb}   [1] {\pE\left[#1\right]}
- \newcommand{\E}    [0] {\pE}
- \newcommand{\pEb}[1]   {\pE\left[#1\right]}
+ \newcommand{\Eb}   [1] {\pE\left[#1\right]}   % DEPRECATED!!!!
+ \newcommand{\E}    [0] {\pE} % DEPRECATED!!!!
+ \newcommand{\pEb}[1]   {\pE\left[#1\right]}   % DEPRECATED!!!!
  \newcommand{\pEx}[1][x]{\pE_{\mathsfup{#1}}} % expected value wrt X
  \newcommand{\pEy}[0]   {\pEx[y]} % expected value wrt Y
  \newcommand{\pEz}[0]   {\pEx[z]} % expected value wrt Y
